# claude-go-rs

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  paths.rs  settings.rs  tty.rs
src/proxy/: mod.rs  server.rs  stream.rs  translate.rs
src/tui/: app.rs  ui.rs
tests/: cli_smoke.rs  integration.rs  proxy_integration.rs  tui_launch_regression.rs
