[package]
name = "claude-go"
version = "0.2.1"
edition = "2021"
rust-version = "1.74"
description = "Route Claude Code to any Anthropic-compatible model with a beautiful TUI"
license = "MIT"
authors = ["Abdulkabir Agboola"]
repository = "https://github.com/Abdk4Moura/claude-go"
readme = "README.md"
keywords = ["claude", "claude-code", "anthropic", "opencode", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "claude-go"
path = "src/main.rs"

[lib]
name = "claude_go"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime (proxy + verify)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "net", "io-util", "signal"] }

# HTTP for verify + live model list
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# HTTP server for the in-process translation proxy
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
hyper = { version = "1", features = ["server"] }
tower = "0.5"
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XDG paths
directories = "5"

# Errors
anyhow = "1"
thiserror = "1"

# Atomic file write
tempfile = "3"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Misc
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
